--- a/Computed/WebContent/index.html
+++ b/Computed/WebContent/index.html
@@ -4,8 +4,62 @@
 <meta charset="UTF-8">
 <title>Vuejs Study</title>
 <script src=" https://unpkg.com/vue"></script>
+<script>
+	window.onload = function(){
+		var vm1 = new Vue({
+			el:'#test1',
+			data : {
+				a1 : 100,
+				a2 : 200
+			},
+			//캐싱없음
+			methods : {
+				test_method : function(){
+					console.log('test_method')
+					return this.a1 + this.a2
+				},
+				setValue : function(){
+					this.a1 = 1000,
+					this.a2 = 2000
+				},
+				getRandomMethod : function(){
+					return Math.random()
+				}
+			},
+			//캐싱
+			computed : {
+				test_computed : function(){
+					console.log('test_computed')
+					return this.a1 + this.a2
+				},
+				getRandomComputed : function(){
+					return Math.random()
+				}
+			}
+		})
+	}
+</script>
 </head>
 <body>
-	
+	<div id="test1">
+		<h3>a1 : {{a1}}</h3>
+		<h3>a2 : {{a2}}</h3>
+		<h3>a1 + a2 : {{a1 + a2}}</h3>
+		<h3>test method : {{test_method()}}</h3>
+		<h3>test method : {{test_method()}}</h3>
+		<h3>test method : {{test_method()}}</h3>
+		<h3>test computed : {{test_computed}}</h3>
+		<h3>test computed : {{test_computed}}</h3>
+		<h3>test computed : {{test_computed}}</h3>
+		
+		<button type="button" v-on:click='setValue'>값 변경</button>
+		
+		<h3>get random method : {{getRandomMethod()}}</h3>
+		<h3>get random method : {{getRandomMethod()}}</h3>
+		<h3>get random method : {{getRandomMethod()}}</h3>
+		<h3>get random computed : {{getRandomComputed}}</h3>
+		<h3>get random computed : {{getRandomComputed}}</h3>
+		<h3>get random computed : {{getRandomComputed}}</h3>
+	</div>
 </body>
 </html>
