--- a/Event/WebContent/index.html
+++ b/Event/WebContent/index.html
@@ -3,17 +3,54 @@
 <head>
 <meta charset="UTF-8">
 <title>Vuejs Study</title>
+<style>
+.in{background-color:red;color:yellow;}
+.out{background-color:yellow;color:red;}
+</style>
 <script src=" https://unpkg.com/vue"></script>
 <script>
 	window.onload = function(){
 		var vm1 = new Vue({
-			el : '#test1'
+			el : '#test1',
+			data : {
+				data1 : 0,
+				data2 : 0,
+				result1 : 0,
+				inOutCss : 'out'
+			},
+			methods : {
+				btnEvent :function(){
+					alert('버튼을 눌러버릇네~')
+				},
+				imageEvent : function(){
+					alert('image click event')
+				},
+				addNumber : function(){
+					this.result1 = this.data1 + this.data2
+				},
+				inEvent : function(){
+					this.inOutCss = 'in'
+				},
+				outEvent : function(){
+					this.inOutCss = 'out'
+				}
+			}
 		})
 	}
 </script>
 </head>
 <body>
 	<div id="test1">
+		<button type="button" v-on:click="btnEvent">버튼</button>
+		<button type="button" @click="btnEvent">버튼2</button><br>
+		<img src="image/logo.png" width="200" @click="imageEvent"><br>
+		<hr>
+		data1 : <input type="number" v-model.number="data1"><br>
+		data2 : <input type="number" v-model.number="data2">
+		<button type="button" @click="addNumber">숫자 더하기</button>
+		<h3>결과 : {{result1}}</h3>
+		<hr>
+		<h3 v-bind:class="inOutCss" @mouseenter="inEvent" @mouseleave="outEvent">문자열</h3>
 	</div>	
 </body>
 </html>
