--- a/VFOR/WebContent/index.html
+++ b/VFOR/WebContent/index.html
@@ -9,7 +9,15 @@
 		var vm1 = new Vue({
 			el:'#test1',
 			data : {
-				array1 : [10, 20, 30, 40, 50]
+				array1 : [10, 20, 30, 40, 50],
+				input1 : '',
+				array2 : []
+			},
+			methods : {
+				addArray2 : function(){
+					this.array2.push(this.input1)
+					this.input1 = ''
+				}
 			}
 		})
 	}
@@ -22,6 +30,12 @@
 		</ul>
 		<ul>
 			<li v-for='(a1, idx) in array1'>{{idx}} : {{a1}}</li>
+		</ul>
+		<hr>
+		<input type="text" v-model='input1'>
+		<button type="button" @click='addArray2'>추가</button>
+		<ul>
+			<li v-for='a2 in array2'>{{a2}}</li>
 		</ul>
 	</div>
 </body>
